jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-jenkins-ingress
spec:
  backend:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-service-node
              servicePort: 80
